修改  关于我们 段落缩进  字体加粗

--- a/views/about/about.html
+++ b/views/about/about.html
@@ -28,7 +28,7 @@
 
 <div class="dui-layout-lg clearfix dui-box-shadow profile">
   <div class="profile-con">
-    <p>金吉列出国留学咨询服务有限公司（简称金吉列留学），成立于1999年，2000年1月由教育部、公安部、国家工商行政管理总局资质认证的出国留学专业服务机构。公司现员工总数2600余人，业务涉及出国留学、海外移民、签证申请服务等领域，在海内外设有50家直营分、子公司。金吉列企业集团是国家工商总局公示认定的“重信用守合同”企业。金吉列留学商标是北京市工商局连续多年认定的“北京市著名商标”。...<a style="color: #C13232" href="{{ helper.urlgen('about/cultures') }}">【查看详情】</a></p>
+    <p>金吉列出国留学咨询服务有限公司（简称金吉列留学），成立于1999年，2000年1月由教育部、公安部、国家工商行政管理总局资质认证的出国留学专业服务机构。公司现员工总数2600余人，业务涉及出国留学、海外移民、签证申请服务等领域，在海内外设有50家直营分、子公司。金吉列企业集团是国家工商总局公示认定的“重信用守合同”企业。金吉列留学商标是北京市工商局连续多年认定的“北京市著名商标”。...<a style="color: #C13232;font-weight: 600" href="{{ helper.urlgen('about/cultures') }}">【查看详情】</a></p>
   </div>
   <div class="profile-img clearfix">
     <img src="{{helper.cdnhost}}/assets/img/newprofile1.jpg?v=2018030701" alt="">
