--- a/views/about/cultures.html
+++ b/views/about/cultures.html
@@ -24,6 +24,7 @@
     font-size: 14px;
     line-height: 26px;
     color: #333;
+    text-indent:2em;
   }
   .agreement {
     background: #fff;
@@ -63,12 +64,12 @@
     <p>“十年磨一剑”。公司经过19年的磨炼和发展，现已成为出国留学咨询服务行业中经营规模大、服务项目全面、品牌美誉度高、市场竞争力强的留学企业之一。每年帮助数万名学子实现了留学梦想，指导和帮助学生进行未来人生规划。公司拥有由两千多名经验丰富、业务精湛的咨询顾问及文案组成的专业团队，他们中很多老师是留学归国人员或具有海外工作、生活经历，不仅了解各国院校信息和申请流程，对海外学习和生活也有过亲身体会，能够为学生的留学生活进行全面细致和切合实际的规划。</p>
 
 
-    <h2>19年的砥砺前行，公司具备以下四大优势：</h2>
-    <p>优势一：金吉列留学作为留学行业首部国家标准的推动和主要起草单位，与中国教育国际交流协会、北京留学服务行业协会共同完成《留学服务术语》与《留学中介服务规范》两部国家标准的起草。2016年11月，两项国家标准由中华人民共和国国家质量监督检验检疫总局、中国国家标准化管理委员会审核并正式发布。</p>
-    <p>优势二：金吉列留学拥有美、英、加、澳、新、日、韩、德、法等24个国家和地区2000余所海外优质合作院校资源，供学生选择，其中包括众多世界知名院校，如美国杜克大学、南加州大学、布兰迪斯大学商学院、波士顿大学语言中心、东北大学、华盛顿大学，英国曼彻斯特大学、格拉斯哥大学，澳大利亚澳国立大学、墨尔本大学、悉尼大学，加拿大多伦多大学、西安大略大学，新西兰奥克兰大学、奥塔哥大学、惠灵顿维多利亚大学等。同时，金吉列留学成为美国U.S. News Global Education 咨询委员会董事单位，帮助学生和其家长在选择美国大学时，做出更恰当、更明智的决定，选择最符合学生兴趣和专长的大学。
+    <h2 style="font-weight: 600">19年的砥砺前行，公司具备以下四大优势：</h2>
+    <p><span style="font-weight: 600">优势一：</span>金吉列留学作为留学行业首部国家标准的推动和主要起草单位，与中国教育国际交流协会、北京留学服务行业协会共同完成《留学服务术语》与《留学中介服务规范》两部国家标准的起草。2016年11月，两项国家标准由中华人民共和国国家质量监督检验检疫总局、中国国家标准化管理委员会审核并正式发布。</p>
+    <p><span style="font-weight: 600">优势二：</span>金吉列留学拥有美、英、加、澳、新、日、韩、德、法等24个国家和地区2000余所海外优质合作院校资源，供学生选择，其中包括众多世界知名院校，如美国杜克大学、南加州大学、布兰迪斯大学商学院、波士顿大学语言中心、东北大学、华盛顿大学，英国曼彻斯特大学、格拉斯哥大学，澳大利亚澳国立大学、墨尔本大学、悉尼大学，加拿大多伦多大学、西安大略大学，新西兰奥克兰大学、奥塔哥大学、惠灵顿维多利亚大学等。同时，金吉列留学成为美国U.S. News Global Education 咨询委员会董事单位，帮助学生和其家长在选择美国大学时，做出更恰当、更明智的决定，选择最符合学生兴趣和专长的大学。
     </p>
-    <p>优势三：由各省市消费者协会或消费者权益保护委员会授权设立的，遍布全国的47家行业全公益的金吉列出国留学消费教育学校或教育基地，为学生留学保驾护航。消费教育学校/基地从保护出国留学消费者切身利益出发，以 “开办消费教育义务课堂系列授课”的形式，帮助广大留学消费者了解留学的基本知识和合法正规的途径，规避留学消费的误区和陷阱，培养留学消费者的自觉维权能力并引导学生和家长理性留学。为真正做到一切从维护消费者的利益出发，把留学消费教育落实到实处，公司还在中国消费者协会的指导和支持下，与中消协于2013-2016年期间共同编辑出版《出国留学消费指导手册》，免费向留学消费者发放，受益学生和家长近百万人次。</p>
-    <p>优势四：由25名金吉列出国留学消费教育学校留学消费教育指导专家和38名美国常青藤大学和知名大学教授组成的留学专家团队，为学生提供专业的留学规划指导。金吉列出国留学消费教育学校留学消费教育指导专家由长期从事海外教育工作，具有与国外教育界多年沟通交流经验的教授、专家和学者组成，他们对国外高等教育体制、院校特色、专业设置、授课特点、文化风俗等有深入研究。此外，他们还深谙所在国家的留学移民政策，凭借多年积累的海外教育工作经验，指导和帮助广大中国留学生了解世界，实现留学成才梦想。金吉列留学特别推出的美国常青藤院校教授大讲堂，特邀众多美国知名院校教授亲临现场，为希望留学美国的学子答疑解惑，指引方向。</p>
+    <p><span style="font-weight: 600">优势三：</span>由各省市消费者协会或消费者权益保护委员会授权设立的，遍布全国的47家行业全公益的金吉列出国留学消费教育学校或教育基地，为学生留学保驾护航。消费教育学校/基地从保护出国留学消费者切身利益出发，以 “开办消费教育义务课堂系列授课”的形式，帮助广大留学消费者了解留学的基本知识和合法正规的途径，规避留学消费的误区和陷阱，培养留学消费者的自觉维权能力并引导学生和家长理性留学。为真正做到一切从维护消费者的利益出发，把留学消费教育落实到实处，公司还在中国消费者协会的指导和支持下，与中消协于2013-2016年期间共同编辑出版《出国留学消费指导手册》，免费向留学消费者发放，受益学生和家长近百万人次。</p>
+    <p><span style="font-weight: 600">优势四：</span>由25名金吉列出国留学消费教育学校留学消费教育指导专家和38名美国常青藤大学和知名大学教授组成的留学专家团队，为学生提供专业的留学规划指导。金吉列出国留学消费教育学校留学消费教育指导专家由长期从事海外教育工作，具有与国外教育界多年沟通交流经验的教授、专家和学者组成，他们对国外高等教育体制、院校特色、专业设置、授课特点、文化风俗等有深入研究。此外，他们还深谙所在国家的留学移民政策，凭借多年积累的海外教育工作经验，指导和帮助广大中国留学生了解世界，实现留学成才梦想。金吉列留学特别推出的美国常青藤院校教授大讲堂，特邀众多美国知名院校教授亲临现场，为希望留学美国的学子答疑解惑，指引方向。</p>
     <p> 为了给学生提供高效规范和方便快捷的服务，公司坚持从管理上下功夫，多年来持续进行管理优化和服务流程再造：公司以国际标准的管理模式为基础，创建了科学的、符合留学行业特点的留学服务管理模式；通过ISO9001质量管理体系认证和UKAS国际质量管理体系认证；自主研发客户关系管理系统（CRM）,企业管理模式荣获北京市企业管理现代化创新成果二等奖；荣获中国消费者协会3.15标志信誉认证企业；北京市消费者协会授予 “消费者满意单位”；设立“千万元海外优秀留学生奖学金计划”，出资奖励海外优秀学子；公司高度关注慈善公益事业，多年来金吉列留学回报社会，捐款捐物累计总价值超过上千万元。公司先后获得“消费者信赖的知名品牌”、“保护消费者权益诚信服务优秀示范单位”、“质量管理先进单位”、中国消费者协会、北京市消费者协会“3.15标志服务品牌许可使用单位”、“全国商业诚信企业”、“全国青年文明号”、“奥运承诺践诺先进单位”、“全国用户满意服务明星单位”等荣誉称号，推出“十大承诺”、“金诺计划”，并在消费者协会设立了假一赔十“先行赔付基金”的出国留学服务机构。公司连续数年被新浪、网易、腾讯、百度等知名媒体评为 “年度最具综合实力教育集团”，“年度最具品牌影响力留学机构”等。</p>
 <p>北京金吉列出入境咨询服务有限公司（简称金吉列出入境公司）隶属于金吉列出国留学咨询服务有限公司，是金吉列留学全资直营子公司。公司成立于2002 年7 月，是经公安部和国家工商行政管理总局认证备案， 由北京市公安局正式批准的中国公民因私出入境专业咨询服务机构。资质证号：京公境准字【2002】0023 号。公司是北京因私出入境中介机构协会副会长单位，是 “重信用守合同”企业。</p>
 <p>金吉列出入境公司专业办理加拿大、美国、澳洲、新西兰、英国及欧洲各国投资移民、技术移民、杰出人才类移民、亲属团聚移民和各类签证项目。公司与美国、加拿大、澳大利亚、英国等数十个国家的政府部门、行业协会、专业机构、知名律师等建立了广泛的合作关系。凭借良好的信誉、口碑和科学严谨的管理，公司赢得了政府部门、业界同行、新闻媒体和广大客户的赞誉和好评。公司连续数年被搜狐、新浪、腾讯网站评为“十大优秀移民机构”、 “金牌移民服务机构”、“卓越移民服务机构”称号。2017年，被中央人民广播电台央广网评为“公信力海外投资服务机构”，被新浪网教育频道评为“2017年度中国品牌影响力移民机构”。</p>
