修改 用户协议注册  字体加粗

--- a/views/agreement.html
+++ b/views/agreement.html
@@ -56,7 +56,7 @@
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
 {{ new_nav_red.new_nav_red(tdk,helper) }}
 <div class="agreement">
-  <h1><i></i>金吉列用户注册协议</h1>
+  <h1 style="font-weight: 600"><i></i>金吉列用户注册协议</h1>
   <div class="agreementcon" style="padding-bottom: 20px">
   <h2 style="">提示条款</h2>
 <p>欢迎您与金吉列出国留学咨询服务有限公司（下称“金吉列”）共同签署本《金吉列用户使用协议》（下称“本协议”）并使用金吉列网站服务！</p>
