--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -18,23 +18,23 @@
 <div class="nationality_guoqi_warp">
   <div class="nationality_guoqi">
     <div class="liuxue-guoqi">
-      <a href="#country1"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国留学"><p>美国</p></a>
-      <a href="#country3"><img src="{{helper.cdnhost}}/assets/img/Canada.png" alt="加拿大留学"><p>加拿大</p></a>
-      <a href="#country4"><img src="{{helper.cdnhost}}/assets/img/Australia.png" alt="澳大利亚留学"><p>澳大利亚</p></a>
-      <a href="#country5"><img src="{{helper.cdnhost}}/assets/img/NEW ZEALAND.png" alt="新西兰留学"><p>新西兰</p></a>
-      <a href="#country2"><img src="{{helper.cdnhost}}/assets/img/England.png" alt="英国留学"><p>英国</p></a>
-      <a href="#country108"><img src="{{helper.cdnhost}}/assets/img/eire.png" alt="爱尔兰留学"><p>爱尔兰</p></a>
-      <a href="#country7"><img src="{{helper.cdnhost}}/assets/img/Greece.png" alt="希腊留学"><p>希腊</p></a>
-      <a href="#country8"><img src="{{helper.cdnhost}}/assets/img/Malta.png" alt="马耳他留学"><p>马耳他</p></a><br>
-      <a href="#country112"><img src="{{helper.cdnhost}}/assets/img/Spanish.png" alt="西班牙留学"><p>西班牙</p></a>
-      <a href="#country10"><img src="{{helper.cdnhost}}/assets/img/Portuguesa.png" alt="葡萄牙留学"><p>葡萄牙</p></a>
-      <a href="#country11"><img src="{{helper.cdnhost}}/assets/img/Cyprus.png" alt="塞浦路斯留学"><p>塞浦路斯</p></a>
-      <!--<a href="#country109"><img src="{{helper.cdnhost}}/assets/img/Holand.png" alt="荷兰留学"><p>荷兰</p></a>-->
-      <a href="#country14"><img src="{{helper.cdnhost}}/assets/img/st. kitts.png" alt="圣基茨留学"><p>圣基茨</p></a>
-      <a href="#country12"><img src="{{helper.cdnhost}}/assets/img/Antigua.png" alt="安提瓜留学"><p>安提瓜</p></a>
-      <a href="#country15"><img src="{{helper.cdnhost}}/assets/img/Grenada.png" alt="格林纳达留学"><p>格林纳达</p></a>
-      <a href="#country13"><img src="{{helper.cdnhost}}/assets/img/Dominica.png" alt="多米尼克留学"><p>多米尼克</p></a>
-      <a  href="#country54"><img src="{{helper.cdnhost}}/assets/img/HongKong.png" alt="中国香港留学"><p>中国香港</p></a>
+      <a href="#country1"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国移民"><p>美国</p></a>
+      <a href="#country3"><img src="{{helper.cdnhost}}/assets/img/Canada.png" alt="加拿大移民"><p>加拿大</p></a>
+      <a href="#country4"><img src="{{helper.cdnhost}}/assets/img/Australia.png" alt="澳大利亚移民"><p>澳大利亚</p></a>
+      <a href="#country5"><img src="{{helper.cdnhost}}/assets/img/NEW ZEALAND.png" alt="新西兰移民"><p>新西兰</p></a>
+      <a href="#country2"><img src="{{helper.cdnhost}}/assets/img/England.png" alt="英国移民"><p>英国</p></a>
+      <a href="#country108"><img src="{{helper.cdnhost}}/assets/img/eire.png" alt="爱尔兰移民"><p>爱尔兰</p></a>
+      <a href="#country7"><img src="{{helper.cdnhost}}/assets/img/Greece.png" alt="希腊移民"><p>希腊</p></a>
+      <a href="#country8"><img src="{{helper.cdnhost}}/assets/img/Malta.png" alt="马耳他移民"><p>马耳他</p></a><br>
+      <a href="#country112"><img src="{{helper.cdnhost}}/assets/img/Spanish.png" alt="西班牙移民"><p>西班牙</p></a>
+      <a href="#country10"><img src="{{helper.cdnhost}}/assets/img/Portuguesa.png" alt="葡萄牙移民"><p>葡萄牙</p></a>
+      <a href="#country11"><img src="{{helper.cdnhost}}/assets/img/Cyprus.png" alt="塞浦路斯移民"><p>塞浦路斯</p></a>
+      <!--<a href="#country109"><img src="{{helper.cdnhost}}/assets/img/Holand.png" alt="荷兰移民"><p>荷兰</p></a>-->
+      <a href="#country14"><img src="{{helper.cdnhost}}/assets/img/st. kitts.png" alt="圣基茨移民"><p>圣基茨</p></a>
+      <a href="#country12"><img src="{{helper.cdnhost}}/assets/img/Antigua.png" alt="安提瓜移民"><p>安提瓜</p></a>
+      <a href="#country15"><img src="{{helper.cdnhost}}/assets/img/Grenada.png" alt="格林纳达移民"><p>格林纳达</p></a>
+      <a href="#country13"><img src="{{helper.cdnhost}}/assets/img/Dominica.png" alt="多米尼克移民"><p>多米尼克</p></a>
+      <a  href="#country54"><img src="{{helper.cdnhost}}/assets/img/HongKong.png" alt="中国香港移民"><p>中国香港</p></a>
     </div>
     <div class="liuxue-guojia-title">
       移民国家及地区
