--- a/views/index.html
+++ b/views/index.html
@@ -359,6 +359,7 @@
   </div>
   {% include "widget/liuxue_item/liuxue_item.html" %}
 </div>
+{% include "widget/online_evaluation/online_consultation.html" %}
 {% include "widget/new_footer/new_footer.html" %}
 </div>
 {% import "widget/new_slide/new_slide.html" as  slide %}
