--- a/views/login/login.html
+++ b/views/login/login.html
@@ -49,7 +49,7 @@
     <div class="login_content">
       <div class="login_nei text-center loginscreen  animated fadeInDown" style="text-align: left">
         <!-- <h3 class="login_nei_title">登录金吉列<a target="_blank"  href="{{helper.urlgen('register')}}">注册一个新账号</a></h3> -->
-        <div class=" clearfix" id="guwen" style="margin-left: -15px;font-size: 18px;">
+        <div class=" clearfix" id="guwen_login" style="margin-left: -15px;font-size: 18px;">
             <input class="wrap-con" type="radio" name="payMethod" value="1" checked="checked" id="liu"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu">留学顾问</label> 
             <input class="wrap-ing" type="radio" name="payMethod" value="2" id="yi"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="yi">移民顾问</label>
         </div>
