--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -437,13 +437,12 @@ $.ajax({
 //          url: 'http://192.168.100.77/api/sendcode/' + $('#phone').val(),
 //    url: 'http://www.51daxuetong.cn/api/sendcode/' + $('#phone').val(),
 //      url: ajaxUrlPrefix.ucapi + '/api/index.php?m=sendcode&phone=' + $('#newEmail').val(),
-  url: js_api_config.wwhost + '/sendcode_s',
+  url: '/sendcode_s',
   type:'GET',
   data: {
     phone: $('#phone').val()
   },
-  dataType: 'jsonp',
-  jsonpCallback:'cb',
+  dataType: 'json',
   withCredentials:true,
   success:function(msg){
     console.log('msg', msg);
@@ -495,7 +494,7 @@ if (!$("#guwen input[type='checkbox']").is(':checked')) {
       return
     }
 $.ajax({
-  url: js_api_config.wwhost + '/login_user',
+  url: '/login_user',
   type:'POST',
   dataType:'json',
   data: {
@@ -518,10 +517,9 @@ $.ajax({
 //普通用户退出
 function outlogin () {
 $.ajax({
-  url: js_api_config.wwhost + '/login_out',
+  url: '/login_out',
   type: 'GET',
-  dataType: 'jsonp',
-  jsonpCallback:'cb',
+  dataType: 'json',
   success:function(msg){
     if (msg == 'ok') {
       console.log('登出')
@@ -552,13 +550,12 @@ function sendphone_reg () {
 //          url: 'http://192.168.100.77/api/sendcode/' + $('#phone').val(),
 //    url: 'http://www.51daxuetong.cn/api/sendcode/' + $('#phone').val(),
 //      url: ajaxUrlPrefix.ucapi + '/api/index.php?m=sendcode&phone=' + $('#newEmail').val(),
-      url: js_api_config.wwhost + '/sendcode_s',
+      url: '/sendcode_s',
       type:'GET',
       data: {
         phone: $('#phone_reg').val()
       },
-      dataType: 'jsonp',
-      jsonpCallback:'cb',
+      dataType: 'json',
       withCredentials:true,
       success:function(msg){
         console.log('msg', msg);
@@ -610,7 +607,7 @@ function sendphone_reg () {
       return
     }
     $.ajax({
-      url: js_api_config.wwhost + '/login_user',
+      url: '/login_user',
       type:'POST',
       dataType:'json',
       data: {
