--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -81,16 +81,16 @@
     if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'login?h=http:') {
       console.log('11111')
 //      window.location.href = '/login?h=' + h
-      //window.open('/login?h=' + h);
-      window.open(fn.urlgen("login")+'?h='+h);
+      window.open('/login?h=' + h);
+      //window.open(fn.urlgen("login")+'?h='+h);
     } else if (hhh[1] != undefined && hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login') {
       console.log('aaaa')
       window.location.reload();
     } else {
       console.log('22222');
 //      window.location.href = '/login'
-      //window.open('/login?h=');
-      window.open(fn.urlgen('login')+'?h=');
+      window.open('/login?h=');
+      //window.open(fn.urlgen('login')+'?h=');
     }
   }
 </script>
