--- a/views/about/culture_detail.html
+++ b/views/about/culture_detail.html
@@ -39,6 +39,12 @@
   .culture_detailcing {
     margin-top: 6px;
   }
+  .culture_detailcing img {
+       display: table-cell; //主要是这个属性
+       vertical-align: middle;
+       text-align: center;
+       margin: 0 auto;
+   }
 </style>
 <body style="background: #f5f5f5">
 
