--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -142,7 +142,7 @@ form, input {
 
 /*搜索*/
 .new_nav_first .nav-right .new-searchs{
-    width: 300px;
+    width: 350px;
     height: 30px;
     position: relative;
     z-index:999;
@@ -150,6 +150,25 @@ form, input {
     background-color: #fff;
     float: right;
     margin-left: 30px;
+}
+.new_nav_first .nav-right .search-type-box{
+    width: 50px;
+    height: 30px;
+    float: left;
+}
+.new_nav_first .nav-right .search-type-box .search-type {
+    position: absolute;
+    width: 50px;
+    height: 30px;
+    left: 0;
+    top: 0;
+    z-index: 999;
+}
+.new_nav_first .nav-right .search-type-box .search-type-ul {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 998;
 }
 .new_nav_first .submit-select{
     height: 30px;
@@ -164,6 +183,7 @@ form, input {
     line-height: 28px;
     border:1px solid #dcdcdc;
     border-right: none;
+    border-left: none;
     padding-left: 10px;
     float: left;
     font-size: 12px;
