修改移民发布文章

--- a/public/assets/css/release_article.css
+++ b/public/assets/css/release_article.css
@@ -175,6 +175,10 @@
   cursor: pointer;
   margin-right: 30px;
 }
+.recommend-sel i{
+  font-size: 14px;
+  color:#333;
+}
 .newsletter-hide{
   display: none;
 }
