--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -156,7 +156,7 @@
                 {{helper.tagChecked(item.name,article.article_info.tag_list) |safe }}              
               {% endfor %}
               <span class="numTip">
-                注：选中【留学案例】标签及发布至顾问个人主页-案例中
+                注：选中【留学案例】标签即发布至顾问个人主页-案例中
               </span>
               <span class="numTip" style="display:block;
     margin-left: 130px;margin-top:5px;">
