--- a/views/release_article.html
+++ b/views/release_article.html
@@ -153,7 +153,7 @@
                 <i>留学案例</i>
               </span>
               <span class="numTip">
-                注：选中【留学案例】标签及发布至顾问个人主页-案例中
+                注：选中【留学案例】标签即发布至顾问个人主页-案例中
               </span>
               <span class="numTip" style="display:block;
     margin-left: 130px;margin-top:5px;">
