--- a/views/widget/new_nav_first/common_nav.html
+++ b/views/widget/new_nav_first/common_nav.html
@@ -26,8 +26,8 @@
                                     </div>
                                 </div>-->
                 <div class="search-type-box">
-                    <span class="search-type"></span>
-                    <ul>
+                    <div class="search-type"><span class="search-type-text">留学</span><i class="iconfont go-down" style="font-size: 12px;">&#xe8ca;</i></div>
+                    <ul class="search-type-ul">
                         <li>留学</li>
                         <li>移民</li>
                     </ul>
