--- a/views/widget/yimin_customization1/yimin_customization1.html
+++ b/views/widget/yimin_customization1/yimin_customization1.html
@@ -206,7 +206,7 @@
       success:function(msg){
         console.log(msg);
         if(msg.code === 0){
-          alert('成功');
+          alert('老师将为您做专业评估。');
 
         } else {
           alert(msg.message);
