--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -275,10 +275,9 @@
 </div>
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide_yimin/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_HOME_SEAT10",helper) }}
+{{slide.leyu_slide(helper) }}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/slide_yimin.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script>
   $(function () {
