--- a/views/widget/new_slide_yimin/new_slide.html
+++ b/views/widget/new_slide_yimin/new_slide.html
@@ -1,6 +1,6 @@
 <!--右侧在线咨询-->
 
-{% macro leyu_slide(path,helper) %}
+{% macro leyu_slide(helper) %}
 <div class="mui-mbar-tabs" style="z-index:999">
   <div class="quick_links_wrap quick_links_dockright">
     <div class="quick_link_mian">
@@ -15,7 +15,7 @@
             <img src="{{helper.cdnhost}}/assets/img/yijian.png" alt="在线评估" class="quick-img">
             <span>在线评估</span>
             <div id="comment_con"
-                 style="width:320px;background: #fff;right:40px;top: -52px;position: absolute;border: 1px solid #f8f8f8;display: none">
+                 style="width:320px;background: #fff;right:40px;top:0px;position: absolute;border: 1px solid #f8f8f8;display: none">
               <div id="comment_close" style="margin-left: 5px;font-size: 15px;cursor: pointer;color:#333333;">x</div>
               {% include "widget/yimin_customization1/yimin_customization1.html" %}
             </div>
@@ -33,12 +33,44 @@
   </div>
 </div>
 <div id="quick_links_pop" class="quick_links_pop quick_message_list"
-     style="right: 40px; margin-top: -345px; display: none; width: 170px;z-index:99999;">
+     style="right: 40px; margin-top: -300px; display: none; width: 170px;z-index:99999;">
   <a href="javascript:void(0);" class="ibar_closebtn" title="关闭">×</a>
   <div>
     <ul id="lylist">
-
+      <li><a target="_blank"  onclick="openchat('jjl-vs1-000211')">美国移民咨询</a></li>
+      <li><a target="_blank"  onclick="openchat('jjl-vs-zongjingli')" >加拿大移民咨询</a></li>
+      <li><a target="_blank"  onclick="openchat('jjl-vs1-010115')">澳大利亚移民咨询</a></li>
+      <li><a target="_blank"  onclick="openchat('jjl-vs1-011331')">新西兰移民咨询</a></li>
+      <li><a target="_blank"  onclick="openchat('jjl-vs1-011515')">英国移民咨询</a></li>
+      <li><a target="_blank"  onclick="openchat('jjl-vs1-800003')">爱尔兰移民咨询</a></li>
+      <li><a target="_blank"  onclick="openchat('jjl-vs1-011081')">希腊移民咨询</a></li>
+      <li><a target="_blank"   onclick="openchat('jjl-vs1-800006')">马耳他移民咨询</a></li>
+      <li><a target="_blank"   onclick="openchat('jjl-vs1-800007')" >西班牙移民咨询</a></li>
+      <li><a target="_blank"   onclick="openchat('jjl-vs-zongjingli')">葡萄牙移民咨询</a></li>
+      <li><a target="_blank"   onclick="openchat('jjl-vs1-000211')">塞浦路斯移民咨询</a></li>
+      <li><a target="_blank"   onclick="openchat('jjl-vs1-011515')">圣基茨移民咨询</a></li>
+      <li><a target="_blank"   onclick="openchat('jjl-vs1-010115')" >安提瓜移民咨询</a></li>
+      <li><a target="_blank"   onclick="openchat('jjl-vs1-800003')">格林纳达移民咨询</a></li>
+      <li><a target="_blank"   onclick="openchat('jjl-vs1-011331')">多米尼克移民咨询</a></li>
+      <li><a target="_blank"   onclick="openchat('jjl-vs-zongjingli')">中国香港</a></li>
+      <li style="border:0px; height:124px; margin-top:6px;"><img src="{{helper.cdnhost}}/assets/img/yimin_weixin.jpg" alt="官方微信" width="112" height="114"></li>
     </ul>
   </div>
 </div>
+<script>
+  function  openchat(jobnum){
+    window.open('http://jesong.jjl.cn/live/chat.dll?c=1&n='+jobnum,'','height=500,width=320,directories=no,location=no,menubar=no,resizeable=no,status=no,toolbar=no,top=100,left=200')
+  }
+  $('#to_top').click(function(){
+    $('html , body').animate({scrollTop: 0},'slow');
+  });
+  $(".ibar_closebtn").on("click",function(){
+    $(this).parent("#quick_links_pop").css("display","none")
+  })
+  $("#zxzx").on("click",function(){
+    $("#quick_links_pop").css("display","block")
+  })
+
+</script>
+</script>
 {% endmacro %}
