移民侧边表单

--- a/views/widget/yimin_customization1/yimin_customization1.html
+++ b/views/widget/yimin_customization1/yimin_customization1.html
@@ -33,7 +33,7 @@
     height: 28px;color:#999999;border: 1px solid #dcdcdc;padding-left:10px;background:#ffffff url({{helper.cdnhost}}/assets/img/select-down1.png) no-repeat 167px 0">
       <option value='3'>加拿大</option>
       <option value='1'>美国</option>
-      <option value='4'>澳洲</option>
+      <option value='4'>澳大利亚</option>
       <option value='5'>新西兰</option>
       <option value='2'>英国</option>
       <option value='108'>爱尔兰</option>
@@ -46,7 +46,7 @@
       <option value='13'>多米尼克</option>
       <option value='14'>圣基茨</option>
       <option value='15'>格林纳达</option>
-      <option value='109'>荷兰</option>
+      <option value='54'>中国香港</option>
     </select>
 
     <div class="numTip" id="departmentNumTip2s"></div>
