修改发布文章移民 去掉选择国家字样

--- a/views/release_article_yimin.html
+++ b/views/release_article_yimin.html
@@ -68,7 +68,7 @@
                 {"countryId":"54","txt":"中国香港"}
               ] %}
               <select id="apply-country" >
-                <option value="">请选择</option>
+                <!-- <option value="">请选择</option> -->
                 {% for item in countryList %}
                   <option value="{{item.countryId}}">{{item.txt}}</option>
                 {% endfor %}
