--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -42,8 +42,8 @@
   </div>
 </div>
 {% include "widget/top/top.html" %}
-{% import "widget/new_nav_first/yimin_nav.html" as yimin_nav %}
-{{ yimin_nav.yimin_nav(tdk,helper) }}
+{#% import "widget/new_nav_first/yimin_nav.html" as yimin_nav %}
+{{ yimin_nav.yimin_nav(tdk,helper) }#}
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
 {{ common_nav.common_nav(tdk,helper) }}
 <div class="main" style="width: 1200px;margin: 0 auto;">
