--- a/views/widget/new_nav_first/new_nav_red.html
+++ b/views/widget/new_nav_first/new_nav_red.html
@@ -350,19 +350,13 @@
                 </div>
             </div>
             <div class="new-searchs new-home-search">
-<!--                <div class="top_sec will">
-                    <span class="please-sec"><a  target="_blank" href="javascript:void(0);" id="searchType">顾问</a><i class="iconfont go-down" style="font-size: 12px;">&#xe60b;</i></span>
-                    <div class="sec-xq">
-                        <ul id="searchTypeList">
-                            <li><a  target="_blank" href="">资讯</a></li>
-                            <li><a  target="_blank" href="">顾问</a></li>
-                            <li><a  target="_blank" href="">活动</a></li>
-                            <li><a  target="_blank" href="">案例</a></li>
-                            <li><a  target="_blank" href="">院校</a></li>
-
-                        </ul>
-                    </div>
-                </div>-->
+                <div class="search-type-box">
+                    <div class="search-type"><span class="search-type-text" id="searchType">留学</span><i class="iconfont go-down" style="font-size: 12px;">&#xe8ca;</i></div>
+                    <ul class="search-type-ul">
+                        <li>文章</li>
+                        <li>顾问</li>
+                    </ul>
+                </div>
                 <input type="text" id="search" placeholder="请输入搜索关键词" class="text text-nav"
                        onfocus="if(this.placeholder == '请输入搜索关键词'){this.value = '';}"
                        onblur="if(this.value == ''){this.placeholder= '请输入搜索关键词';}">
