添加代码片段（相关顾问/猜你喜欢）

--- a/views/widget/advisor_star/advisor_star_cell.html
+++ b/views/widget/advisor_star/advisor_star_cell.html
@@ -7,7 +7,7 @@
 					<span class="bg-span" style="background:url({{helper.avaterimg(gw_item.user_info.uid, 'small', gw_item.user_info.status,gw_item.user_info.version)}}) no-repeat center center;background-size: cover;"></span>
 					 <div class="artical-info">
 						  <div class="user-infos">
-								<span class="people-name">{{gw_item.user_info.nickname}}</span>
+								<span class="people-name">{{gw_item.user_info.realname}}</span>
 								<span class="people-action">{{gw_item.user_info.dept}}</span>
 						  </div>
 						  <div class="guwen-info">
