--- a/views/center_article.html
+++ b/views/center_article.html
@@ -132,8 +132,13 @@
     </div>
   </div>
   {% include "widget/new_footer/new_footer.html" %}
+  {% if userinfo.adviser_type==1 %}
   {% import "widget/new_slide/new_slide2.html" as  slide %}
   {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+  {% elseif  userinfo.adviser_type==2 %}
+  {% import "widget/new_slide_yimin/new_slide2.html" as  slide %}
+  {{slide.leyu_slide(helper) }}
+  {% endif %}
   <script>
     var login_ss = null; 
     if($.cookie('login_ss') != undefined){
