--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -95,8 +95,13 @@
     </div>
   </div>
 </div>
+  {% if userinfo.adviser_type==1 %}
   {% import "widget/new_slide/new_slide2.html" as  slide %}
   {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+  {% elseif  userinfo.adviser_type==2 %}
+  {% import "widget/new_slide_yimin/new_slide2.html" as  slide %}
+  {{slide.leyu_slide(helper) }}
+  {% endif %}
 {% include "widget/new_footer/new_footer.html" %}
   <div>
     <input type="hidden" id="detail_id" value="{{id}}"/>
