--- a/views/center_case_detail.html
+++ b/views/center_case_detail.html
@@ -87,8 +87,13 @@
   </div>
 </div>
   {% include "widget/new_footer/new_footer.html" %}
+  {% if userinfo.adviser_type==1 %}
   {% import "widget/new_slide/new_slide2.html" as  slide %}
   {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+  {% elseif  userinfo.adviser_type==2 %}
+  {% import "widget/new_slide_yimin/new_slide2.html" as  slide %}
+  {{slide.leyu_slide(helper) }}
+  {% endif %}
   <div>
       <input type="hidden" id="detail_id" value="{{id}}"/>
   </div>
