--- a/views/center_main.html
+++ b/views/center_main.html
@@ -172,8 +172,13 @@
     </div>
 </div>
 {% include "widget/new_footer/new_footer.html" %}
+{% if userinfo.adviser_type==1 %}
 {% import "widget/new_slide/new_slide2.html" as  slide %}
 {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+{% elseif  userinfo.adviser_type==2 %}
+{% import "widget/new_slide_yimin/new_slide2.html" as  slide %}
+{{slide.leyu_slide(helper) }}
+{% endif %}
 <div id="photoDialog" style="display: none;"><!---->
     <!--上传pop-->
     <div class="upload-photo-container" id="upload-photo-container" style="display: none">
