--- a/views/release_article_yimin.html
+++ b/views/release_article_yimin.html
@@ -298,8 +298,8 @@
       </div>
 	</div>
   {% include "widget/new_footer/new_footer.html" %}
-  {% import "widget/new_slide/new_slide2.html" as  slide %}
-  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+    {% import "widget/new_slide_yimin/new_slide2.html" as  slide %}
+    {{slide.leyu_slide(helper) }}
   <script>
     var login_ss = null; //获取用户信息
     if($.cookie('login_ss') != undefined){
