--- a/views/widget/new_nav_first/new_nav_red.html
+++ b/views/widget/new_nav_first/new_nav_red.html
@@ -157,7 +157,7 @@
                         "companyId": "30"
                         },
                         {
-                        "companyAddress": "昆明分公司：昆明市盘龙区东风东路36号，建工大厦28层，2808-2811号办公楼",
+                        "companyAddress": "昆明分公司：昆明市东风东路36号建投大厦6楼金吉列留学",
                         "companyTel": "服务专线：0871-63536688",
                         "companyName": "K-昆明",
                         "companyId": "21"
@@ -199,7 +199,7 @@
                         "companyId": "38"
                         },
                         {
-                        "companyAddress": "青岛分公司：青岛市香港中路40号数码旗舰大厦19层A1室",
+                        "companyAddress": "青岛分公司：青岛市市南区香港中路40号数码旗舰大厦19层A1室",
                         "companyTel": "服务专线：0532-86667776",
                         "companyName": "Q-青岛",
                         "companyId": "10"
