修改忘记密码

--- a/views/login/forget.html
+++ b/views/login/forget.html
@@ -57,7 +57,7 @@
           </div>
           <div class="form-group clearfix">
             <div class="title"><span>*&nbsp;</span>验&nbsp;证&nbsp;码&nbsp;：</div>
-            <input  type="text" id="verify_forget" class="form-control" style="width: 114px;display: inline-block;" required data-vaild="^\d{4}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+            <input  type="text" id="verify_forget" class="form-control" style="width: 114px;display: inline-block;" required data-vaild="^\d{6}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
             <div class="bind-button" style="width: 100px;float: left">
               <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
               <input type="button" class="btn btn-primary" style="width: 100px;text-align: center;padding: 6px 2px;background: #fff;color: #c6a770;border: 1px solid #c6a770;border-radius: 3px;line-height: 0px" id="sendcun_forget" value="发送验证码"/>
@@ -228,6 +228,14 @@
       $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入手机号').popover({"trigger":"manual"}).popover("show");
       return
     }
+    if ($('#verify_forget').val() === '') {
+      layer.msg('请输入手机验证码');
+      return
+    }
+    if (!/^\d{6}$/.test($("#verify_forget").val())) {
+      layer.msg('验证位数不足6位');
+      return
+    }
     if ($('#password').val() === '') {
       $('#password').parent().addClass("has-error").removeClass("has-success");
       $('#password').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入密码').popover({"trigger":"manual"}).popover("show");
@@ -248,8 +256,14 @@
       $('#password').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '两次密码输入不一致').popover({"trigger":"manual"}).popover("show");
       return
     }
-    if ($('#verify_forget').val() === '') {
-      layer.msg('请请输入手机验证码');
+    if (!/^[a-zA-Z0-9]{8,16}$/.test($("#password").val())) {
+      $('#password').parent().addClass("has-error").removeClass("has-success");
+      $('#password').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '密码8-16位').popover({"trigger":"manual"}).popover("show");
+      return
+    }
+    if (!/^[a-zA-Z0-9]{8,16}$/.test($("#qie_password").val())) {
+      $('#qie_password').parent().addClass("has-error").removeClass("has-success");
+      $('#qie_password').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '密码8-16位').popover({"trigger":"manual"}).popover("show");
       return
     }
     /*if (!$("input[type='checkbox']").is(':checked')) {
