--- a/views/so_article_yimin.html
+++ b/views/so_article_yimin.html
@@ -195,8 +195,8 @@
 </style>
 <body style="background: #f5f5f5">
 {% include "widget/top/top.html" %}
-{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-{{ new_nav_red.new_nav_red(tdk,helper) }}
+{% import "widget/new_nav_first/yimin_search_nav.html" as yimin_search_nav %}
+{{ yimin_search_nav.yimin_search_nav(tdk,helper) }}
 <div class="dui-layout-lg clearfix banner-box">
     <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
