--- a/views/widget/new_nav_first/new_nav_first.html
+++ b/views/widget/new_nav_first/new_nav_first.html
@@ -1,5 +1,4 @@
 {% macro new_nav_first(tdk,helper) %}
-<link rel="stylesheet" href="{{helper.cdnhost}}/views/widget/new_nav_first/new_nav_first.css">
 <div class="new_nav_first_white">
     <div class="new_nav_first clearfix">
         <div class="new-logo-left">
@@ -352,7 +351,7 @@
             </div>
             <div class="new-searchs new-home-search">
                 <div class="search-type-box">
-                    <div class="search-type"><span class="search-type-text" id="searchType">留学</span><i class="iconfont go-down" style="font-size: 12px;">&#xe8ca;</i></div>
+                    <div class="search-type"><span class="search-type-text" id="searchType">文章</span><i class="iconfont go-down" style="font-size: 12px;">&#xe8ca;</i></div>
                     <ul class="search-type-ul">
                         <li>文章</li>
                         <li>顾问</li>
