--- a/views/widget/new_nav_first/yimin_search_nav.html
+++ b/views/widget/new_nav_first/yimin_search_nav.html
@@ -1,12 +1,12 @@
-{% macro common_nav(tdk,helper) %}
+{% macro yimin_search_nav(tdk,helper) %}
 <div class="new_nav_first_red">
     <div class="new_nav_first clearfix">
         <div class="new-logo-left">
-            <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/logo_common.png" alt="金吉列留学官网"/></a>
+            <a  target="_blank" href="{{ helper.urlgen('yimin') }}"><img src="{{helper.cdnhost}}/assets/img/yimin_logo_transparent.png" alt="金吉列移民官网"/></a>
         </div>
         <ul class="page-type">
+            <li class="active"><a href="{{ helper.urlgen('yimin') }}">移民</a></li>
             <li class="active"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">留学</a></li>
-            <li class="active"><a href="">移民</a></li>
             <li style="width: 118px;" class="active"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
         </ul>
         <div class="nav-right">
@@ -14,8 +14,8 @@
                 <div class="search-type-box">
                     <div class="search-type"><span class="search-type-text" id="searchType">留学</span><i class="iconfont go-down" style="font-size: 12px;">&#xe8ca;</i></div>
                     <ul class="search-type-ul">
-                        <li>留学</li>
-                        <li>移民</li>
+                        <li>文章</li>
+                        <li>顾问</li>
                     </ul>
                 </div>
                 <input type="text" id="search" placeholder="请输入搜索关键词" class="text text-nav"
