修改发布移民的标签

--- a/views/release_article_yimin.html
+++ b/views/release_article_yimin.html
@@ -369,7 +369,7 @@
           newTagStr = '';
         }else{
           $('.newsletter-hide').slideUp();
-          newTagStr = '留学时讯';
+          newTagStr = '移民时讯';
         }
       });
       //选择国家 切换学历
