--- a/views/widget/new_nav_first/yimin_search_nav.html
+++ b/views/widget/new_nav_first/yimin_search_nav.html
@@ -12,7 +12,7 @@
         <div class="nav-right">
             <div class="new-searchs new-home-search">
                 <div class="search-type-box">
-                    <div class="search-type"><span class="search-type-text" id="searchType">留学</span><i class="iconfont go-down" style="font-size: 12px;">&#xe8ca;</i></div>
+                    <div class="search-type"><span class="search-type-text" id="searchType">文章</span><i class="iconfont go-down" style="font-size: 12px;">&#xe8ca;</i></div>
                     <ul class="search-type-ul">
                         <li>文章</li>
                         <li>顾问</li>
