搜索js的添加

--- a/views/so_article_yimin.html
+++ b/views/so_article_yimin.html
@@ -391,6 +391,7 @@
 
 </script>
 </body>
-<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
+<!--<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>-->
+<script src="{{helper.cdnhost}}/assets/js/nav_yimin_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 </html>
