--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -356,6 +356,6 @@
   })
 </script>
 </body>
-<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav_yimin_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 </html>
