--- a/views/login/login.html
+++ b/views/login/login.html
@@ -42,8 +42,8 @@
 
   <div class="login_overseas clearfix">
     
-    <div style="margin: 0px auto;height: 550px;min-width: 1180px;width: 100%">
-      <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 1920px;height: 550px;display:block;overflow:hidden;"/>
+    <div style="margin: 0px auto;height: 550px;min-width: 1180px;width: 100%;background: url({{helper.cdnhost}}/assets/img/login_background.png) no-repeat;">
+      <!--<img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 1920px;height: 550px;display:block;overflow:hidden;"/>-->
     </div>
     
     <div class="login_content">
