--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -49,7 +49,7 @@
       {% if userinfo.adviser_type == 1 %}
         {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+country,'c='+tdk.cityid) %}
       {% else %}
-        {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+country,'c='+tdk.cityid) %}
+        {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+country,'c='+tdk.cityid,'uid='+userinfo.uid) %}
       {% endif %}
     </div>
   </div>
