--- a/views/widget/new_nav_first/common_nav.html
+++ b/views/widget/new_nav_first/common_nav.html
@@ -6,7 +6,7 @@
         </div>
         <ul class="page-type">
             <li class="active"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">留学</a></li>
-            <li class="active"><a href="">移民</a></li>
+            <li class="active"><a href="{{ helper.urlgen('yimin') }}">移民</a></li>
             <li style="width: 118px;" class="active"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
         </ul>
         <div class="nav-right">
