--- a/views/index.html
+++ b/views/index.html
@@ -444,6 +444,6 @@
   })
 </script>
 </body>
-<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 </html>
