--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -9,8 +9,8 @@
   <!-- ===头部=== -->
   {% include "widget/top/top.html" %}
   <!-- ====导航===== -->
-  {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-  {{ new_nav_red.new_nav_red(tdk,helper) }}
+  {% import "widget/new_nav_first/common_nav.html" as common_nav %}
+  {{ common_nav.common_nav(tdk,helper) }}
   <!--轮播图广告-->
   <div class="dui-layout-lg clearfix banner-box">
     <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
@@ -158,7 +158,7 @@
     }
   </script>
   <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/nav.js" ></script>
+  <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
