--- a/views/center_case.html
+++ b/views/center_case.html
@@ -72,8 +72,8 @@
 </style>
 <body style="background: #f5f5f5">
   {% include "widget/top/top.html" %}
-  {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-  {{ new_nav_red.new_nav_red(tdk,helper) }}
+  {% import "widget/new_nav_first/common_nav.html" as common_nav %}
+  {{ common_nav.common_nav(tdk,helper) }}
   <div class="dui-layout-lg clearfix banner-box">
     <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
@@ -151,7 +151,7 @@
   <script src="{{helper.cdnhost}}/assets/js/common/select.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
   <script>
     $(function() {
