--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -75,8 +75,8 @@
 </style>
 <body style="background: #f5f5f5">
   {% include "widget/top/top.html" %}
-  {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-  {{ new_nav_red.new_nav_red(tdk,helper) }}
+  {% import "widget/new_nav_first/common_nav.html" as common_nav %}
+  {{ common_nav.common_nav(tdk,helper) }}
 
 	<!-- ==广告1== -->
   <div class="dui-layout-lg clearfix banner-box">
@@ -154,12 +154,11 @@
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
   <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/common/select.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
   <script>
     $(function () {
