--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -37,7 +37,7 @@
           </div>
       </div>
     </div>
-    <li class="address clearfix">
+    <div class="address clearfix">
       <h2>欢迎来访</h2>
       <ol class="xiangxi-address one" id="qita-city">
         <li><i class="iconfont">&#xe679;</i><span>400-010-8000</span></li>
