--- a/views/widget/new_footer/yimin_footer.html
+++ b/views/widget/new_footer/yimin_footer.html
@@ -26,11 +26,11 @@
                 <h2 class="guanzhu">关注金吉列:</h2>
                 <div class="clearfix">
                     <dl class="foot-weibo">
-                        <dt><img src="{{helper.cdnhost}}/assets/img/weibo.png" alt="微博"></dt>
+                        <dt><img src="{{helper.cdnhost}}/assets/img/yimin_weibo.png" alt="微博"></dt>
                         <dd>官方微博</dd>
                     </dl>
                     <dl>
-                        <dt><img src="{{helper.cdnhost}}/assets/img/weixin.png" alt="微信"></dt>
+                        <dt><img src="{{helper.cdnhost}}/assets/img/yimin_weixin.png" alt="微信"></dt>
                         <dd>官方微信</dd>
                     </dl>
                 </div>
