公共footer的引入

--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -146,7 +146,7 @@
   {% import "widget/new_slide_yimin/new_slide3.html" as  slide %}
   {{slide.leyu_slide(userinfo,login_info,helper) }}
   {% endif %}
-  {% include 'widget/new_footer/new_footer.html' %}
+  {% include "widget/new_footer/common_footer.html" %}
   <div>
     <!-- <input type="hidden" id="detail_catid" value="{{catid}}"/> -->
     <input type="hidden" id="detail_id" value="{{article_id}}"/>
