参赞头部js的引入

--- a/views/about/canzan.html
+++ b/views/about/canzan.html
@@ -62,7 +62,7 @@
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/nav.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_ninth.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_fifth.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js" ></script>
