移民搜索页引入侧边栏

--- a/views/widget/new_slide_yimin/new_slide.html
+++ b/views/widget/new_slide_yimin/new_slide.html
@@ -52,7 +52,7 @@
       <li><a target="_blank"   onclick="openchat('jjl-vs1-010115')" >安提瓜移民咨询</a></li>
       <li><a target="_blank"   onclick="openchat('jjl-vs1-800003')">格林纳达移民咨询</a></li>
       <li><a target="_blank"   onclick="openchat('jjl-vs1-011331')">多米尼克移民咨询</a></li>
-      <li><a target="_blank"   onclick="openchat('jjl-vs-zongjingli')">中国香港</a></li>
+      <li><a target="_blank"   onclick="openchat('jjl-vs-zongjingli')">中国香港移民咨询</a></li>
       <li style="border:0px; height:124px; margin-top:6px;"><img src="{{helper.cdnhost}}/assets/img/yimin_weixin.jpg" alt="官方微信" width="112" height="114"></li>
     </ul>
   </div>
