--- a/views/so_article_yimin.html
+++ b/views/so_article_yimin.html
@@ -278,11 +278,10 @@
     </div>
 </div>
 {% include "widget/new_footer/yimin_footer.html" %}
-{% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+{% import "widget/new_slide_yimin/new_slide.html" as  slide %}
+{{slide.leyu_slide(helper) }}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
-<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/slide_yimin.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script>
     $(function () {
